--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    background-color: black;
+}
 button{
     padding: 10px;
     border: none;
@@ -8,9 +15,10 @@ button{
 button.active{
     background-color: lightskyblue;
 }
-div.active{
-    display: block;
-}
-.tabs_item1, .tabs_item2, .tabs_item3{
+.tabs_item{
+    color: #fff;
     display: none;
+}
+.tabs_item.active{
+    display: block;
 }
