--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ button{
     outline: none;
     background-color: grey;
     color: #fff;
+    margin-top: 10px;
+    border-radius: 8px;
+}
+button:hover{
+    background-color: #bfbfbf;
+    transform: rotate(360deg);
+    transition: 0.7s;
 }
 button.active{
     background-color: lightskyblue;
@@ -18,6 +25,9 @@ button.active{
 .tabs_item{
     color: #fff;
     display: none;
+    line-height: 1.7em;
+    color: #fefefe;
+    padding: 6px;
 }
 .tabs_item.active{
     display: block;
