--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ button:hover{
 button.active{
     background-color: lightskyblue;
 }
+button:click{
+    background-color: green;
+}
 .tabs_item{
     color: #fff;
     display: none;
